--- a/mysite/accounts/templates/registration/login.html
+++ b/mysite/accounts/templates/registration/login.html
@@ -5,7 +5,7 @@
 <form method='post' id='formlog'>
     {% csrf_token %}
     {{ form.as_p }}
-    <button type='submit'>Log in</button>
+    <a href='/'><button type='submit'>Log in</button>
 </form>
 </section>
 {% endblock content %}
