--- a/mysite/eshop/static/css/style.css
+++ b/mysite/eshop/static/css/style.css
@@ -5,7 +5,7 @@
 h1{
     position: top;
 	font-weight: 10; 
-	font-size: 45px; 
+	font-size: 30px; 
 	text-align: left;
 	color: rgb(255, 255, 255); 
 	margin: 0;
@@ -77,7 +77,7 @@ button.outline:active{
 	justify-content: space-between;
 }
 header{
-    background-color: rgb(158, 162, 237);
+    background-color: rgb(251, 245, 245);
 	background-size: cover;
 	background-position: center 30%;
 	position: relative;
@@ -86,31 +86,46 @@ header{
 	height: 100%;
 }
 nav{
+	padding: 0;
+	margin: 0;
 	width:100%;
-	background-color: #d7e2fb;
+	background-color: #252627;
+	top: 50%;
+	bottom: 50%;
+}
+a{
+	text-decoration: none;
 }
 .nav_a{
-    margin-right: 7%;
-    margin-left: 7%;
+    margin-right: 5%;
+    margin-left: 5%;
     width: 100%;
 }
 .nav_h2{
-    width: 100%; 
+    width: 100%;
+	color: whitesmoke; 
 }
 .nav_p{
     width: 100%;
+	color: whitesmoke;
+	font-family: sans-serif;
 }
 .header_div{
     display: flex;
 	flex-wrap: wrap;
     justify-content: left;
+	padding-top: 1.5%;
 }
 .header_div_div{
-    background-color: #ffffff;
+    background-color: rgb(251, 245, 245);
     margin-left: 6%;
     margin-right: 6%;
+	margin-top: 0.5%;
 	width: 180px;
-	margin-top: 30px;
+	padding: 0.5%;
+}
+.header_div_div:hover {
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22); 
 }
 .header_img{
 	width: 100%;
@@ -119,7 +134,9 @@ nav{
 .tov{
 	margin-left: 15%;
 	margin-right: 15%;
-	background-color: #f7f4b4;
+	background-color: rgb(251, 245, 245);
+	padding-top: 5%;
+	padding-bottom: 5%;
 }
 .tov1{
 	display: flex;
@@ -130,8 +147,8 @@ nav{
 	margin-right: 10%;
 }
 .img_tov{
-	width: 10%;
-	height: 10%;
+	height: 100%;
+	width: auto;
 }
 .cont{
 	display: flex;
@@ -140,3 +157,54 @@ nav{
 .inp, .search_butt{
 	margin-top: 2%;
 }
+html{
+	padding: 0%;
+	margin:0%;
+}
+body {
+    margin: 0;
+}
+.index_h1_div{
+	background-color: rgb(251, 245, 245);
+	text-align: left;
+}
+.index_h1{
+	margin-left: 7%;
+	color: rgb(14, 14, 14);
+}
+h1{
+	font-family: 'Trebuchet MS', sans-serif;
+	
+}
+header{
+	padding-bottom: 2%;
+	padding-top: 2%;
+}
+form {
+	position: relative;
+	width: 300px;
+	margin: 0 auto;
+  }
+  .d1 {background: #A3D0C3; margin-top: 10%;}
+  .d1 input {
+	width: 100%;
+	height: 42px;
+	padding-left: 10px;
+	border: 2px solid #7BA7AB;
+	border-radius: 5px;
+	outline: none;
+	background: #F9F0DA;
+	color: #9E9C9C;
+  }
+  .d1 button {
+	margin-top: 10%;
+	position: absolute; 
+	top: 0;
+	right: -18px;
+	width: 80px;
+	height: 47px;
+	border: none;
+	background: #7BA7AB;
+	cursor: pointer;
+	border-radius: 8px;
+  }
