--- a/mysite/eshop/templates/html/categorie.html
+++ b/mysite/eshop/templates/html/categorie.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="header_div_div">
-    <img src="{{categorie.image}}">
-    <a><h3 class="header_h3">{{categorie.name}}</h3></a>
-</div>
+
+    
+    <img class="header_img" src="{{categorie.image}}">
+    <h3 class="header_h3">{{categorie.name}}</h3>
