--- a/mysite/eshop/templates/html/search.html
+++ b/mysite/eshop/templates/html/search.html
@@ -3,9 +3,11 @@
 {% block content %}
     <div class="cont">
         <form action='/search' method='POST'>
-            <input class="inp" name='text'>
-            <button class="search_butt">Search</button>
-            {% csrf_token %}
+            <div class="d1">
+                <input  name='text' placeholder="Look for whatever you want">
+                <button type="submit">Search</button>
+                {% csrf_token %}
+            </div>
         </form>
     </div>
     <div class="header_div">
